# dtat-library

./: .gitignore  Makefile  README.md  lttb_experiment.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: dtat_cookbook.ipynb  fake_data.py
dtat/: commonchartfuncs.py  datacacher.py  datachecker.py  datainterpolator.py  demo_data.py  dtatdata.py  mouseover_maker.py  palette.py  plot.py  stacked.py  types.py
dtat/dataconnectors/: csvconnector.py
test/: test_dtat_library.py
