[metadata]
name = dtat
version = 1.0.1
author = Emily Winner
author_email =
description = Data Trending and Analysis Tool Library
home_page = github.jpl.nasa.gov/Europa-PESS/dtat-library
license = Caltech (JPL)

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
install_requires=
        nbformat>=4.2.0
        pandas~=2.2.2
        plotly>=5.14
        setuptools
